Create project with auth (#147)
